# searchmgr

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  test.smgr
.github/workflows/: publish.yaml  rust-ci.yaml
src/: App.css  App.tsx  data.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  parse_md.rs  setup_data.rs
src-tauri/src/setup_data/: legacy_0_0_0.rs
src/hooks/: useListen.tsx
