[package]
name = "searchmgr"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-write-file", "fs-exists", "dialog-save", "fs-read-dir", "shell-open", "fs-read-file", "dialog-open"] }
pulldown-cmark = { version = "0.11.0", default-features = false, features = ["pulldown-cmark-escape", "getopts"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
