[package]
name = "searchmgr"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-all", "os-all", "process-all", "fs-exists", "fs-copy-file", "fs-read-file", "fs-read-dir", "fs-write-file", "fs-create-dir", "path-all", "dialog-save", "shell-open", "http-all", "dialog-open"] }
pulldown-cmark = { version = "0.11.0", default-features = false, features = ["pulldown-cmark-escape", "getopts"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
bson = { version = "2.11.0", features = ["serde_with", "chrono-0_4", "uuid-1"] }
uuid = { version = "1.9.1", features = ["serde"] }
chrono = "0.4.38"
semver = { version = "1.0.23", features = ["serde"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
