[package]
name = "searchmgr"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-dir", "fs-write-file", "shell-open", "process-all", "path-all", "http-all", "fs-read-file", "clipboard-all", "fs-create-dir", "fs-copy-file", "os-all", "fs-exists", "dialog-save", "dialog-open"] }
pulldown-cmark = { version = "0.11.0", default-features = false, features = ["pulldown-cmark-escape", "getopts"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
bson = { version = "2.11.0", features = ["serde_with", "chrono-0_4", "uuid-1"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
